Feature: finished database functions

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="main">
       <div id="nowPlaying">
-        <audio controls></audio>
+        <audio id="currentAudio" controls></audio>
         <div id="npTitle"></div>
         <div id="npDescription"></div>
       </div>
