clean up code, add loading message

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       </div>
       <input id="search" type="text" placeholder="search"/>
 
-      <div id="podcasts"></div>
+      <div id="podcasts"><p id="loading">loading podcasts...</p></div>
   </div>
   </body>
 </html>
