--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,28 @@
     <title>RSS Podcast Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="player.css">
 
   </head>
   <body>
     <div id="main">
       <div id="nowPlaying">
-        <audio id="currentAudio" controls></audio>
+        <!-- <audio id="currentAudio" preload="auto" controls></audio> -->
+        <div id="player">
+          <audio id="currentAudio" preload="auto" controls></audio>
+          <input type="range" minimum=0 maximum=100 id="seek"></input>
+          <div id="seek-values">
+            <p id="current">0:00</p>
+            <p id="duration">4:41</p>
+          </div>
+          <div id="controls">
+            <div id="rewind"></div>
+            <div id="play">
+              <div id="play-button" class="play"></div>
+            </div>
+            <div id="fast-forward"></div>
+          </div>
+        </div>
         <div id="npTitle"></div>
         <div id="npDescription"></div>
       </div>
@@ -23,3 +39,4 @@
 </html>
 
 <script src="./script.js"></script>
+<script src="./player.js"></script>
