Added images for 'Rewind/Fast Forward 15s' buttons, css cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
             <p id="duration">0:00</p>
           </div>
           <div id="controls">
-            <div id="rewind"></div>
+            <img id="rewind" src="rew15.svg"></img>
             <div id="play">
               <div id="play-button" class="play"></div>
             </div>
-            <div id="fast-forward"></div>
+            <img id="fast-forward" src="ff15.svg"></img>
           </div>
         </div>
         <div id="npTitle"></div>
