Feature: Added pagination

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <div id="npTitle"></div>
         <div id="npDescription"></div>
       </div>
-      <input id="search" type="text" placeholder="search"/>
+      <input id="search" type="search" placeholder="search"/>
 
       <div id="podcasts"><p id="loading">fetching podcasts...</p></div>
   </div>
